[gd_scene load_steps=33 format=2]

[ext_resource path="res://fonts/binbows_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/my_computer_icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/recycle_bin_icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/folder_icon.png" type="Texture" id=4]
[ext_resource path="res://sprites/task_panel.png" type="Texture" id=5]
[ext_resource path="res://locations/desktop.gd" type="Script" id=6]
[ext_resource path="res://sprites/binbows_button0.png" type="Texture" id=7]
[ext_resource path="res://sprites/binbows_button1.png" type="Texture" id=8]
[ext_resource path="res://sprites/start_panel.png" type="Texture" id=9]
[ext_resource path="res://sprites/error_panel.png" type="Texture" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 75, 23 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 75, 23 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 75, 23 )

[sub_resource type="DynamicFont" id=22]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 22 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 150, 80 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[node name="desktop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="my_comp" type="TextureRect" parent="."]
margin_left = 23.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 48.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="my_comp"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 1.0
margin_right = 25.5
margin_bottom = 35.0
text = "DESKTOP_MY_COMP"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="my_comp"]
anchor_left = -0.25
anchor_right = 1.25
anchor_bottom = 2.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recycle_bin" type="TextureRect" parent="."]
margin_left = 23.0
margin_top = 147.0
margin_right = 54.0
margin_bottom = 179.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="recycle_bin"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 1.0
margin_right = 25.5
margin_bottom = 35.0
text = "DESKTOP_BIN"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="recycle_bin"]
anchor_left = -0.25
anchor_right = 1.25
anchor_bottom = 2.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="folder" type="TextureRect" parent="."]
margin_left = 23.0
margin_top = 272.0
margin_right = 54.0
margin_bottom = 304.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="folder"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 1.0
margin_right = 25.5
margin_bottom = 35.0
text = "DESKTOP_FOLDER"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="folder"]
anchor_left = -0.25
anchor_right = 1.25
anchor_bottom = 2.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ena" type="TextureRect" parent="."]
margin_left = 323.0
margin_top = 201.0
margin_right = 354.0
margin_bottom = 233.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ena"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 1.0
margin_right = 25.5
margin_bottom = 35.0
text = "DESKTOP_ENA"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_game" type="Button" parent="ena"]
anchor_left = -0.25
anchor_right = 1.25
anchor_bottom = 2.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_panel" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
texture = ExtResource( 5 )

[node name="time" type="Label" parent="task_panel"]
margin_left = 583.0
margin_top = 8.0
margin_right = 623.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "22:00:99"

[node name="error" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="error"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -20.0
margin_right = 20.0
text = "ok"

[node name="alert" type="Label" parent="error"]
anchor_right = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "DESKTOP_ALERT"
align = 1

[node name="Label" type="Label" parent="error"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 3.0
margin_right = -3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_ERROR"
autowrap = true
clip_text = true

[node name="start" type="TextureRect" parent="."]
visible = false
margin_top = 217.0
margin_right = 164.0
margin_bottom = 456.0
texture = ExtResource( 9 )

[node name="programs" type="Label" parent="start"]
margin_left = 64.0
margin_top = 12.0
margin_right = 143.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_PROGRAMS"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="docs" type="Label" parent="start"]
margin_left = 64.0
margin_top = 45.0
margin_right = 143.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_DOCUMENTS"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Label" parent="start"]
margin_left = 64.0
margin_top = 74.0
margin_right = 143.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_SETTINGS"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="find" type="Label" parent="start"]
margin_left = 64.0
margin_top = 107.0
margin_right = 143.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_FIND"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Label" parent="start"]
margin_left = 64.0
margin_top = 139.0
margin_right = 143.0
margin_bottom = 153.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_HELP"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run" type="Label" parent="start"]
margin_left = 64.0
margin_top = 169.0
margin_right = 143.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_RUN"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shut" type="Label" parent="start"]
margin_left = 64.0
margin_top = 212.0
margin_right = 143.0
margin_bottom = 226.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_SHUT"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="start"]
margin_left = 25.0
margin_right = 161.0
margin_bottom = 193.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="exit" type="Button" parent="start"]
margin_left = 29.0
margin_top = 200.0
margin_right = 157.0
margin_bottom = 236.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="start_btn" type="Button" parent="."]
margin_left = 1.0
margin_top = 453.0
margin_right = 58.0
margin_bottom = 479.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )

[node name="quit_shader" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.631373 )

[node name="quit" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alert" type="Label" parent="quit"]
anchor_right = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "DESKTOP_ALERT"
align = 1

[node name="Label" type="Label" parent="quit"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 3.0
margin_right = -3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "DESKTOP_QUIT"
autowrap = true
clip_text = true

[node name="yes" type="Button" parent="quit"]
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.1
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 13.0
text = "YES"

[node name="no" type="Button" parent="quit"]
anchor_left = 0.9
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.8
margin_left = -40.0
margin_bottom = 13.0
text = "NO"

[connection signal="pressed" from="my_comp/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="recycle_bin/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="folder/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ena/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="error/Button" to="." method="_on_ERROR_Button_pressed"]
[connection signal="pressed" from="start/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="start/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="quit/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="quit/no" to="." method="_on_no_pressed"]
